# rest-framework

rest_framework/: README.md  db.sqlite3  pyproject.toml
rest_framework/_core/: settings.py  urls.py
rest_framework/a_api/: apps.py  serializers.py  urls.py  views.py
rest_framework/a_home/: models.py  views.py
rest_framework/a_home/migrations/: 0001_initial.py
rest_framework/a_home/templates/a_home/: comment.html  home.html
